--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -718,6 +718,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .all_wrap .check_more{background:#000;color:#fff;padding:10px;}
 .all_wrap .check_more a{color:#fff;}
 .all_wrap .common{margin:0 1% 20px 1%;}
+.all_wrap .common p.category{font-size:20px;background:#000;color:#fff;padding:5px 10px;}
 .all_wrap .common span{margin-top:20px;}
 .all_wrap .common .h_price .span_01{color:#616161;text-decoration:line-through;font-size:15px;}
 .all_wrap .common .h_price .span_02{font-size:15px;}
