--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -9,6 +9,7 @@
       <%= f.input :sp_image, label: 'Store Logo' %>
       <%= f.input :sp_link, label: 'Store Link' %>
       <%= f.input :sp_title, label: 'Title of Deal'%>
+      <%= f.input :sp_spare_01, label: 'Korean Title'%>
       <div class="pricing clearfix">
         <%= f.input :sp_spare_40, label: 'List Price' %>
         <%= f.input :sp_spare_41, label: 'Current Price' %>
