--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -781,3 +781,10 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .ctrl-btn.pro-next{right:0;}
 
 
+.amz_slider_banner{font-family: 'Righteous',cursive;}
+.amz_slider_banner .left{float:left;width:38%;margin-right:2%;}
+.amz_slider_banner .left p{font-size:47px;line-height:1.1;padding:50px 0 10px 0;}
+.amz_slider_banner .left span{font-size:40px;line-height:1.1;}
+.amz_slider_banner .right{float:left;width:60%;}
+
+
