--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -14,6 +14,7 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
+        <p>MENU</p>
         <li><a href="/deals/stores">HOME,</a></li>
         <li class="coumos1"><a href="/storepromotions">SALES OFFER & PROMOTIONS,</a></li>
         <li><a href="/storedeals">BARGAINS BY STORE</a></li>
