--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -4,7 +4,7 @@
   <%= render 'shared/header_short' %>
   <div class="deals_main_menu clearfix">
     <ul>
-      <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain <!-- <span>|</span> --> </a></li>
       <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
     </ul>    
   </div>
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="rt_cnt">
-          <h2>Quick search on Amazon</h2>
+          <h2>Real Time Hot Deal Finder on Amazon</h2>
           
           <%= render 'shared/amz_search' %>
            
