--- a/app/views/home/_gadget.html.erb
+++ b/app/views/home/_gadget.html.erb
@@ -51,4 +51,11 @@
       </section>
     </div>
   <% end %>
+
+    <!-- <div class="card with-photo">
+      <section class="card-body">
+        <p>Keep Finding</p>
+        <p>Awesome Gadgets</p>
+      </section>
+    </div> -->
 </div><!--./card_wrap-->
