--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -29,6 +29,7 @@
     
     <div class="gnb_m">      
       <ul class="clearfix">
+        <p>MENU</p>
         <li><a href="/">HOME<span>,</span></a></li> 
         <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
