--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -106,13 +106,14 @@ header .gnb_m,header .gnb_open2{display:none;}
   
   header .gnb_pc>ul{display:none;}
   header .gnb_m{display:block;height:200px;background:#000;position:fixed;left:-800px;top:0;width:100%;z-index:303;}
-  header .gnb_m>ul{margin:10px 0 0 5%;}
-  header .gnb_m>ul>li{border-right:none;float:none;font-family:'Anton', sans-serif;}
-  header .gnb_m>ul>li>a{text-decoration:none;font-size:50px;font-weight:600;line-height:1.1;text-align:left;color:#fff;display:block;}
+  header .gnb_m>ul{margin:10px 5% 0 5%;font-family:'Anton', sans-serif;}
+  header .gnb_m>ul>li{border-right:none;float:none;margin:10px 0;}
+  header .gnb_m>ul>li>a{text-decoration:none;font-size:50px;font-weight:600;line-height:1.1;text-align:left;color:#fff;display:block;border:1px solid;padding:5px;}
   header .gnb_m>ul>li>a>em{font-size:17px;}
   header .gnb_m>ul>li>ul{margin-left:30px;}
   header .gnb_m>ul>li>ul>li{}
   header .gnb_m>ul>li>ul>li>a{text-decoration:none;color:#fff;font-size:25px;line-height:1.3;}
+  header .gnb_m>ul>p{font-size:50px;color:#fff;letter-spacing:15px;border-bottom:5px solid;width:40%;}
   header .gnb_m>.gnb_close{display:block;position:absolute;right:0;top:12px;z-index:303;margin:0 5%;}
   header .gnb_m>.gnb_close img{width:50px;height:50px;}
   header .gnb_open2{display:block;position:fixed;left:0;top:10px;z-index:301;margin:0 5%;}
@@ -227,14 +228,15 @@ header .gnb_m,header .gnb_open2{display:none;}
   .shoes_nav{margin-top:20px;}
   .sub_nav .sub_nav_pc{display:none;}
   .sub_nav .gnb_m{display:block;background:#000;position:fixed;right:-800px;top:0;width:100%;z-index:303;}
-  .sub_nav .gnb_m>ul{margin:10px 0 0 5%;}
+  .sub_nav .gnb_m>ul{margin:10px 5% 0 5%;}
   .sub_nav .gnb_m>ul>li{border-right:none;float:none;margin:10px 0;}
-  .sub_nav .gnb_m>ul>li>a{text-decoration:none;font-size:45px;line-height:1.1;font-family: 'Anton', sans-serif;;text-align:left;color:#fff;display:block;}
+  .sub_nav .gnb_m>ul>li>a{text-decoration:none;font-size:35px;line-height:1.1;font-family: 'Anton', sans-serif;;text-align:left;color:#fff;display:block;border:1px solid;padding:5px;}
   /*.sub_nav .gnb_m>ul>li>a.active{color:#fff;font-weight:500;border-bottom:2px solid #fff;}*/
   .sub_nav .gnb_m>ul>li>a>em{font-size:17px;}
   .sub_nav .gnb_m>ul>li>ul{margin-left:30px;}
   .sub_nav .gnb_m>ul>li>ul>li{}
   .sub_nav .gnb_m>ul>li>ul>li>a{text-decoration:none;color:#000;font-size:17px;line-height:1.3;}
+  .sub_nav .gnb_m>ul>p{font-size:50px;color:#fff;letter-spacing:15px;border-bottom:5px solid;width:40%;}
   .sub_nav .gnb_m>.gnb_close{display:block;position:absolute;right:0;top:12px;z-index:303;margin:0 5%;}
   .sub_nav .gnb_m>.gnb_close>img{width:50px;height:50px;}
   .sub_nav .gnb_open{display:block;position:fixed;right:-10px;top:2px;z-index:301;margin:0 5%;}
@@ -362,7 +364,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .search_box{float:left;width:100%;border:3px solid;}
 .search_box input{font-size:35px;padding:10px;margin-left:20px;border:none;border-bottom:1px solid #ccc;width:97%;}
 @media screen and (max-width:640px){
-  .search_box{float:none;background:#000;padding:3px;}
+  .search_box{float:none;background:#000;}
   .search_box input{font-size:20px;padding:5px;margin:0;width:100%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
