--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -6,7 +6,7 @@
 
   <div class="deals_main_menu clearfix">
     <ul>
-      <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain <!-- <span>|</span> --> </a></li>
       <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
     </ul>    
   </div>
