--- a/app/views/hotdeals/_header.html.erb
+++ b/app/views/hotdeals/_header.html.erb
@@ -3,13 +3,14 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li><a href="/hotdeals">Best Bargain</a></li>
-        <li class="coumos1 more"><a href="/deals/bestdeals">[ Daily Deals ]</a></li>
-        <li><a href="/promocodes">Promo Codes</a></li>
-        <li class="more"><a href="/deals/promo_codes">[ Daily Codes ]</a></li>
+        <li><a href="/deals/bestdeals">Today's Best</a></li>
+        <li><a href="/hotdeals">Bargains</a></li>
+        <!-- <li class="coumos1 more"><a href="/deals/bestdeals"> [ Daily Deals ]</a></li> -->
+        <li><a href="/promocodes">Coupon Codes</a></li>
+        <!-- <li class="more"><a href="/deals/promo_codes">[ Daily Codes ]</a></li> -->
+        <li><a href="/deals/quick_search">Real Time Hot Deal Finder</a></li>
         <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
-        <li class="coumos" ><a href="/deals/promotions">Coupon Codes & Promotions</a></li>
-        <li><a href="/deals/quick_search">Quick Search</a></li>
+        <li class="coumos" ><a href="/deals/promotions">Promotions</a></li>
         <li><% if can? :update, @hotdeals %><%= link_to 'New Hotdeal', new_hotdeal_path %><% end %></li>
         <!-- <li class="search"><%= form_for "",url: hotdeals_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></li> -->
       </ul>
@@ -17,15 +18,17 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
-        <li><a href="/hotdeals">BEST BARGAIN,</a></li>
-        <li><a href="/deals/bestdeals">- DAILY DEALS,</a></li>
-        <li><a href="/promocodes">PROMO CODES,</a></li>
-        <li><a href="/deals/promo_codes">- DAILY CODES,</a></li>
-        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
+        <p>MENU</p>
+        <li><a href="/deals/bestdeals">TODAY"S BEST</a></li>
+        <li><a href="/hotdeals">BARGAINs,</a></li>
+        <!-- <li><a href="/deals/bestdeals">- DAILY DEALS,</a></li> -->
+        <li><a href="/promocodes">COUPON CODES,</a></li>
+        <!-- <li><a href="/deals/promo_codes">- DAILY CODES,</a></li> -->
+        <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
-        <li><a href="/deals/promotions">COUPON CODES & PROMOTIONS,</a></li>
-        <li><a href="/deals/quick_search">QUICK SEARCH</a></li>
+        <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li>
+        <li><a href="/deals/promotions">PROMOTIONS</a></li>
         <li><% if can? :update, @hotdeals %><%= link_to 'New Hotdeal', new_hotdeal_path %><% end %></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
