--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -331,6 +331,7 @@
   .codes .card_wrap .card .inner>.code_high>p>span{font-size:12px;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:14px;}
   .codes .card_wrap .card .inner>.code_high>p>span>.m_codes{background:#000;color:#fff;padding:5px 10px;border-radius:10px;line-height:38px;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:11px;}
   .codes .card_wrap .card .deal_btn em{display:block;font-size:9px;padding:5px 14.5px;}
   
   /*.codes .card_wrap .card .inner>.code_high .toolticommon{display:none;}
@@ -747,7 +748,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 
 
 /* Google Translate */
-#google_translate_element{position: absolute;bottom:calc(53px + 16px);right:16px !important;background:#000;}
+/*#google_translate_element{position: absolute;bottom:calc(53px + 16px);right:16px !important;background:#000;}
 .goog-te-gadget{font-family:Roboto, "Open Sans", sans-serif !important;text-transform:uppercase;}
 .goog-te-gadget-simple{background-color:rgba(255, 255, 255, 0.2) !important;border:1px solid rgba(255, 255, 255, 0.5) !important;padding:8px !important;border-radius:4px !important;font-size:1rem !important;line-height:2rem !important;display:inline-block;cursor:pointer;zoom:1;}
 .goog-te-menu2{max-width:100%;}
@@ -763,9 +764,9 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   #google_translate_element goog-te-gadget{width:100% !important;}
   #google_translate_element .skiptranslate{width:100% !important;}
   #google_translate_element .goog-te-gadget-simple{width:calc(100% - 32px) !important;text-align:center;}
-}
+}*/
 
-/* Product Slider */
+/* Amazon product Slider */
 .slider{width:100%;height:250px;position:relative;margin:20px auto;overflow-x:scroll;overflow-y:hidden;border:1px solid #ccc;border-radius:20px;}
 .slider::-webkit-scrollbar{display:none;}
 .slider .img_box{display:block;margin-right:10px;width:200px;height:200px;}
@@ -780,11 +781,11 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .ctrl-btn.pro-prev{left:0;}
 .ctrl-btn.pro-next{right:0;}
 
-
-.amz_slider_banner{font-family: 'Righteous',cursive;}
+/* Banner TEXT for "/promocodes", "/hotdeals" */
+/*.amz_slider_banner{font-family: 'Righteous',cursive;}
 .amz_slider_banner .left{float:left;width:38%;margin-right:2%;}
 .amz_slider_banner .left p{font-size:47px;line-height:1.1;padding:50px 0 10px 0;}
 .amz_slider_banner .left span{font-size:40px;line-height:1.1;}
-.amz_slider_banner .right{float:left;width:60%;}
+.amz_slider_banner .right{float:left;width:60%;}*/
 
 
