--- a/app/views/storedeals/show.html.erb
+++ b/app/views/storedeals/show.html.erb
@@ -159,7 +159,7 @@
                   </div>
                 <% end %>
                 <div class="box">
-                  <p>Search more on</p>
+                  <p>Compare on</p>
                   <em><a target="_blank" href="https://www.amazon.com/s?k=<%= @storedeal.sd_title %>&tag=3628-20">Amazon<i></i></a></em>
                 </div>
               </div>
