--- a/app/views/hotdeals/_header.html.erb
+++ b/app/views/hotdeals/_header.html.erb
@@ -20,7 +20,7 @@
       <ul class="clearfix">
         <p>MENU</p>
         <li><a href="/deals/bestdeals">TODAY"S BEST</a></li>
-        <li><a href="/hotdeals">BARGAINs,</a></li>
+        <li><a href="/hotdeals">BARGAINS,</a></li>
         <!-- <li><a href="/deals/bestdeals">- DAILY DEALS,</a></li> -->
         <li><a href="/promocodes">COUPON CODES,</a></li>
         <!-- <li><a href="/deals/promo_codes">- DAILY CODES,</a></li> -->
