--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -18,7 +18,15 @@
               <%= link_to (image_tag @hotdeal.himage.url(:small), alt: @hotdeal.h_title, title: @hotdeal.h_spare_04), @hotdeal %>
             <% end %>
           </div>
-          <div class="mark"><span>HOT</span><em>DEALS</em></div>
+          <% discount_rate = 0 %>
+          <% discount_rate =  (@hotdeal.h_spare_43 - @hotdeal.h_spare_44) / @hotdeal.h_spare_43 * 100 %>
+          <% if discount_rate < 50 %>
+            <div class="mark"><span>GOOD</span><em>DEALS</em></div>
+          <% else %>
+            <% if discount_rate >= 50 %>
+              <div class="mark"><span>BEST</span><em>DEALS</em></div>
+            <% end %>
+          <% end %>
           <div class="show_tag"><h3><%= render_with_hashtags(@hotdeal.h_spare_05.to_s) %></h3></div>
           <% if can? :update, @hotdeal %>
             <div class="admin">
@@ -103,36 +111,5 @@
 </div>
 <script><%= render(:partial => 'hotdeals', :handlers => [:erb], :formats => [:js]) %></script>
 
-<script type="text/javascript">
-  $(function() {
-  var Accordion = function(el, multiple) {
-    this.el = el || {};
-    // more then one submenu open?
-    this.multiple = multiple || false;
-    
-    var dropdownlink = this.el.find('.dropdownlink');
-    dropdownlink.on('click',
-                    { el: this.el, multiple: this.multiple },
-                    this.dropdown);
-  };
-  
-  Accordion.prototype.dropdown = function(e) {
-    var $el = e.data.el,
-        $this = $(this),
-        //this is the ul.submenuItems
-        $next = $this.next();
-    
-    $next.slideToggle();
-    $this.parent().toggleClass('open');
-    
-    if(!e.data.multiple) {
-      //show only one menu at the same time
-      $el.find('.submenuItems').not($next).slideUp().parent().removeClass('open');
-    }
-  }
-  
-  var accordion = new Accordion($('.accordion-menu'), false);
-})
-</script>
 
 
