--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,13 +44,13 @@
   </script>
 
   <!-- adsense-->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
    (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-1626664143504156",
         enable_page_level_ads: true
    });
-  </script>
+  </script> -->
 
   <script>
     $(document).ready(function(){
