--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -18,7 +18,13 @@
              <%= link_to (image_tag @promocode.pimage.url(:small), alt: @promocode.p_title, title: @promocode.p_image_title), @promocode %>
             <% end %>
           </div>
-          <div class="mark"><span>HOT</span><em>DEALS</em></div>
+          <% if @promocode.p_spare_27 < 50 %>
+            <div class="mark"><span>GOOD</span><em>DEALS</em></div>
+          <% else %>
+            <% if @promocode.p_spare_27 > 50 %>
+              <div class="mark"><span>BEST</span><em>DEALS</em></div>
+            <% end %>
+          <% end %>
            <% if can? :update, @promocode %>
             <div class="admin">
               <p>Admin Management</p>
@@ -83,37 +89,4 @@
   </div><!--./show_wrap-->
 </div><!--./layout-->
 <script><%= render(:partial => 'promocode', :handlers => [:erb], :formats => [:js]) %></script>
-
-
-<script type="text/javascript">
-  $(function() {
-  var Accordion = function(el, multiple) {
-    this.el = el || {};
-    // more then one submenu open?
-    this.multiple = multiple || false;
-    
-    var dropdownlink = this.el.find('.dropdownlink');
-    dropdownlink.on('click',
-                    { el: this.el, multiple: this.multiple },
-                    this.dropdown);
-  };
-  
-  Accordion.prototype.dropdown = function(e) {
-    var $el = e.data.el,
-        $this = $(this),
-        //this is the ul.submenuItems
-        $next = $this.next();
-    
-    $next.slideToggle();
-    $this.parent().toggleClass('open');
-    
-    if(!e.data.multiple) {
-      //show only one menu at the same time
-      $el.find('.submenuItems').not($next).slideUp().parent().removeClass('open');
-    }
-  }
-  
-  var accordion = new Accordion($('.accordion-menu'), false);
-})
-</script>
 
