--- a/app/views/promocodes/_usa_kor.html.erb
+++ b/app/views/promocodes/_usa_kor.html.erb
@@ -51,8 +51,10 @@
       <span>
         <ul>
           <li>Free Shipping: $25+ of eligible items, fulfilled by Amazon or  <a target="_blank" href="/blogs/blog_01_amz_prime">Prime<i></i></a></li>  
-          <% if @promocode.p_spare_54 > 0 %>
-            <li><a href="#n">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></li>    
+          <% if @promocode.p_spare_54.present? %>
+            <% if @promocode.p_spare_54 > 0 %>
+              <li><a href="#n">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></li>    
+            <% end %>
           <% end %>
           <li>Average ratings and reviews may change after posting.</li>
         <ul>
