--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -9,11 +9,7 @@
     <td>Affiliate_Link</td>
     <td>Logo_Link</td>
   </tr> -->
-  <tr>
-   <td>SSENSE</td>
-   <td>https://bit.ly/33SJ7wj</td>
-   <td>https://i.pinimg.com/564x/c0/7e/31/c07e318fc0cbf0d61ad55332d7cf6c12.jpg</td>
-  </tr>
+  <tr><td>SSENSE</td><td>https://bit.ly/33SJ7wj</td><td>https://i.pinimg.com/564x/c0/7e/31/c07e318fc0cbf0d61ad55332d7cf6c12.jpg</td></tr>
   <tr>
    <td>Nordstrom Rack</td>
    <td>https://bit.ly/2YOoM9e</td>
@@ -60,24 +56,28 @@
    <td>https://i.pinimg.com/564x/d3/86/76/d386766499a7d01213732ce379dbe70f.jpg</td>
   </tr>
   <tr>
-   <td>Site_Name</td>
-   <td>Affiliate_Link</td>
-   <td>Logo_Link</td>
+   <td>Farfetch</td>
+   <td>https://bit.ly/2SVBIKE</td>
+   <td>https://i.pinimg.com/564x/db/9a/7b/db9a7bcae23baceac7044e8e8d0550be.jpg</td>
   </tr>
   <tr>
-   <td>Site_Name</td>
-   <td>Affiliate_Link</td>
-   <td>Logo_Link</td>
+   <td>Ralphlauren</td>
+   <td>https://bit.ly/34hyzrG</td>
+   <td>https://i.pinimg.com/564x/b2/92/a8/b292a8e2b84656d3698da7fb8dd4bba0.jpg</td>
   </tr>
   <tr>
-   <td>Site_Name</td>
-   <td>Affiliate_Link</td>
-   <td>Logo_Link</td>
+   <td>DKNY</td>
+   <td>https://bit.ly/2ZZVCFR</td>
+   <td>https://i.pinimg.com/564x/2f/ee/75/2fee75256318945bea6d7cb038e6841f.jpg</td>
   </tr>
-  <tr>
-   <td>Site_Name</td>
-   <td>Affiliate_Link</td>
-   <td>Logo_Link</td>
-  </tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  
  
 </table>
