--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -4,7 +4,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <%= render 'shared/header_short' %>
-    <div class="dealpage_title"><p>The Best Bargain</p></div>
+    <div class="dealpage_title"><p>The Best Bargain on Amazon</p></div>
     <%= render 'hotdeals/header' %>  
 
       <%= render 'shared/amz_slider' %>
