--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -91,9 +91,10 @@
                   </div>
                 <% end %>
               <% else %>
-                <!-- <div class="text_copied intheshow_store">
+                <em>* End Date: End Soon</em>
+                <div class="text_copied intheshow_store">
                   <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
-                </div> -->
+                </div>
               <% end %>
 
             </div><!--./store_info-->
