--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -70,7 +70,7 @@
    <td>https://bit.ly/2ZZVCFR</td>
    <td>https://i.pinimg.com/564x/2f/ee/75/2fee75256318945bea6d7cb038e6841f.jpg</td>
   </tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Net-A-Porter</td><td>Affiliate_Link</td><td>https://i.pinimg.com/564x/50/19/75/5019757e7d5697b8b0b8ca9c6ebf0fe4.jpg</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
