--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -91,10 +91,12 @@
                   </div>
                 <% end %>
               <% else %>
-                <em>* End Date: End Soon</em>
-                <div class="text_copied intheshow_store">
-                  <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
-                </div>
+                <% if @storepromotion.sp_promocode.present? %>
+                  <em>* End Date: End Soon</em>
+                  <div class="text_copied intheshow_store">
+                    <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
+                  </div>
+                <% end %>
               <% end %>
 
             </div><!--./store_info-->
