--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -6,7 +6,7 @@
     <%= render 'shared/header_short' %>
     <div class="deals_main_menu clearfix">
       <ul>
-        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span></a></li>
         <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
       </ul>    
     </div>
