--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -71,13 +71,13 @@
    <td>https://i.pinimg.com/564x/2f/ee/75/2fee75256318945bea6d7cb038e6841f.jpg</td>
   </tr>
   <tr><td>Net-A-Porter</td><td>Affiliate_Link</td><td>https://i.pinimg.com/564x/50/19/75/5019757e7d5697b8b0b8ca9c6ebf0fe4.jpg</td></tr>
+  <tr><td>Jcrew</td><td>https://bit.ly/2QQa7YM</td><td>https://i.pinimg.com/564x/63/31/92/6331923cb30e8b4af2ace88f2522cfa4.jpg</td></tr>
+  <tr><td>Site_Name</td><td>https://bit.ly/2Qt3sov</td><td>https://i.pinimg.com/564x/18/08/9d/18089d4a417bc18a335dce81cb09cb00.jpg</td></tr>
+  <tr><td>Finish Line</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
-  
+
  
 </table>
