--- a/app/views/deals/stores.html.erb
+++ b/app/views/deals/stores.html.erb
@@ -4,12 +4,11 @@
 
   <div class="deals_main_menu clearfix">
     <ul>
-      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span> </a> <a href="#n">, Shoes</a></li>
+      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span> </a><!--  <a href="#n">, Shoes</a> --></li>
     </ul>    
   </div>
   <%= render 'deals/header_store' %>
   <%= render 'deals/body_stores' %>
   
-
  </div><!--./wrap-->
 </div><!--./layout-->
