--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -131,6 +131,7 @@
 .show_wrap .show_box .show_img .img_box{height:350px;position:relative;}
 .show_wrap .show_box .show_img .store_promotion{height:250px;}
 .show_wrap .show_box .show_img .img_box img{width:100%;height:100%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;border-radius:15px;}
+.show_wrap .show_box .show_img .sd_box img{width:80%;height:80%;}
 .show_wrap .show_box .show_img .img_box img.cover{object-fit:cover;}
 .show_wrap .show_box .show_img .deal_img_box img{width:80%;height:80%;}
 .show_wrap .show_box .show_img .store_imgbox{height:250px;position:relative;width:250px;}
