--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -185,8 +185,8 @@
 .deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
 .deals_card .image_box .term p{margin-top:7px;font-size:11px;}
 .deals_card .image_box .exprie{background:#ff4d4d;}
-.deals_card .image_box .endtoday{background:#ffa500;width:85px;}
-.deals_card .image_box .endtoday p{margin:0;}
+.deals_card .image_box .endtoday{background:#ffa500;width:50px;position:absolute;top:50px;left:4px;}
+.deals_card .image_box .endtoday p{margin:0;height:auto;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
 .deals_card img{width:70%;height:70%;object-fit:contain;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);object-fit:contain;}
 .deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
