--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -54,7 +54,8 @@
        <!-- <p>Please remember that we are not an actual webstore. We do not sell anything ourselves, and we do not ship anything ourselves. We cannot assist you with your purchase orders, and we do not know if a product can be shipped internationally.</p> -->
        <h3># The product you're linking to is no longer available, or the link is broken?</h3>
        <p>Sometimes products will run out of stock or completely be removed from the websites. If you find something like that, please let us know which item it is, so we can update it. We would be much obliged.</p>
-       <a href="/messages/new">Contact Us</a>
+       <!-- <a href="/messages/new">Contact Us</a> -->
+       <a href="#">ohigottabuythis@gmail.com</a>
       </div>
 
 <!--       <div class="bottom sections clearfix">
@@ -62,7 +63,8 @@
         <p>"Oh,igottabuythis" acknowledge some content in this process, the aim is to provide for the convenience to the user. By specifying the source, we respect other people`s rights, as well as to provide support for those who own the contents. Please let us know if your writing has been copied in a way that infringes on copyright infringement, and we will try to work hard to resolve this issue.</p>
   
       </div> -->
- 
+  
+
       <% if can? :update, @messages %>
         <div class="message">
           <h2>Check your messages from customers</h2>  
