--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -17,13 +17,13 @@
           <li><a href="/">#Home</a></li>
           <li><a href="/categories">#Category</a></li>
           <li><a href="/recommends">#Featured</a></li>
-          <li><a href="/deals/bestdeals">#Daily Deals</a></li>
-          <li><a href="/deals/promo_codes">#Daily Codes</a></li>
+          <li><a href="/deals/bestdeals">#Bargain Of Amazon</a></li>
+          <li><a href="/deals/stores">#Bargain By Store</a></li>
           <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li>
-          <li><a href="/deals/promotions">#Promotions</a></li>
-          <li><a href="/deals/quick_search">#Quick Search</a></li>
+          <li><a href="/deals/quick_search">#Amazon HotDeals Finder</a></li>
+          <!-- <li><a href="/deals/promotions">#Promotions</a></li> -->
           <li><a href="/messages">#About US</a></li>
-          <li><a href="/messages/new">#Contact US</a></li>
+          <!-- <li><a href="/messages/new">#Contact US</a></li> -->
         </ul>
       </div>
 
