--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -20,6 +20,7 @@
               <div class="sharing">
                 <p>Available On <%= @storepromotion.spcategory.name %> Now</p>
                 <p><%= @storepromotion.sp_title %></p>
+                <p>#HotDeals #coupons #CouponCodes</p>
               </div>
             </div>
           <% end %>
