--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -33,7 +33,9 @@
                 <% running_total = 0 %>
                 <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
                 <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with 할인 코드 <em>" <%= promocode.p_promocode %> "</em>)</span></p>
-                <p>*할인코드 만료일: <%= promocode.p_end_date %></p>
+                <% if promocode.p_end_date.present? %>
+                  <p>*할인코드 만료일: <%= promocode.p_end_date %></p>
+                <% end %>
                 <a target="_blank" href="<%= promocode.p_link %>">[ 할인코드 사용하기 ]</a><br /><br />        
               <% end %>
               <span class="check_more"><a target="_blank" href="/promocodes">할인코드 더보기 www.ohigottabuythis.net/promocodes</a></span>
@@ -79,7 +81,9 @@
                   <% running_total = 0 %>
                   <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
                   <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code <em>" <%= promocode.p_promocode %> "</em>)</span></p>
-                  <p>*Ends Date: <%= promocode.p_end_date %></p>
+                  <% if promocode.p_end_date.present? %>
+                    <p>*Ends Date: <%= promocode.p_end_date %></p>
+                  <% end %>
                   <a target="_blank" href="<%= promocode.p_link %>"><%= promocode.p_link %></a><br />
                 </div>     
                 <% end %>
